README can now be copy/pasted completely to the shell

--- a/README
+++ b/README
@@ -1,14 +1,15 @@
-Installation:
+# Installation:
 
     git clone git://github.com/inno/dotvim.git ~/.vim
 
-Create symlinks:
+# Create symlinks:
 
     ln -s ~/.vim/vimrc ~/.vimrc
     ln -s ~/.vim/gvimrc ~/.gvimrc
 
-Switch to the `~/.vim` directory, and fetch submodules:
+# Switch to the `~/.vim` directory, and fetch submodules:
 
-    cd ~/.vim
+    pushd ~/.vim
     git submodule init
     git submodule update
+    popd
